--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -7993,7 +7993,7 @@
          <targetPlatform
                archList="all"
                binaryParser="org.eclipse.cdt.core.GNU_ELF"
-               id="org.eclipse.cdt.cross.arc.gnu.linux.platform.base"
+               id="org.eclipse.cdt.cross.arc.gnu.linux.platform.base.600"
                isAbstract="false"
                name="Linux Platform"
                osList="linux">
@@ -8043,7 +8043,7 @@
          </option>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.linux.category.debugging"
-               id="org.eclipse.cdt.cross.arc.gnu.linux.option.debugging.format"
+               id="org.eclipse.cdt.cross.arc.gnu.600.linux.option.debugging.format"
                name="Debug format"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.debugging.format">
             <enablement
@@ -8079,7 +8079,7 @@
          </optionCategory>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.linux.category.addtools"
-               id="org.eclipse.cdt.cross.arc.gnu.linux.option.addtools.printsize"
+               id="org.eclipse.cdt.cross.arc.gnu.600.linux.option.addtools.printsize"
                name="Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.printsize">
          </option>
@@ -8175,7 +8175,7 @@
             </enablement>
          </tool>
          <tool
-               id="org.eclipse.cdt.cross.arc.gnu.linux.printsize.base"
+               id="org.eclipse.cdt.cross.arc.gnu.600.linux.printsize.base"
                isAbstract="false"
                name="ARC Linux ELF32  Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.printsize">
@@ -8183,7 +8183,7 @@
                   type="ALL">
                <checkOption
                      holderId="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.600"
-                     optionId="org.eclipse.cdt.cross.arc.gnu.linux.option.addtools.printsize"
+                     optionId="org.eclipse.cdt.cross.arc.gnu.600.linux.option.addtools.printsize"
                      value="true">
                </checkOption>
                <and>
@@ -8194,6 +8194,30 @@
                </and>
             </enablement>
          </tool>
+                  <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
+               id="org.eclipse.cdt.cross.arc.gnu.600.linux.option.target.fpi"
+               isAbstract="false"
+               name="FPX"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpi">
+            <enumeratedOptionValue
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.none"
+                  isDefault="true"
+                  name="None">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mspfp"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.spfp"
+                  name="Single Precision FPX (-mspfp)">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mdpfp"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.dpfp"
+                  name="Double Precision FPX (-mdpfp)">
+            </enumeratedOptionValue>
+         </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
@@ -8246,23 +8270,23 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
                id="org.eclipse.cdt.cross.arc.gnu.600.linux.elf.debug"
                name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+               parent="org.eclipse.cdt.cross.arc.gnu.600.linux.configuration.base">
             <toolChain
-                  id="org.eclipse.cdt.cross.arc.gnu.linux.elf.toolchain.debug"
+                  id="org.eclipse.cdt.cross.arc.gnu.600.linux.elf.toolchain.debug"
                   isAbstract="false"
                   secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
                   superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.600"
                   targetTool="org.eclipse.cdt.cross.arc.gnu.linux.elf.c.linker.debug;org.eclipse.cdt.cross.arc.gnu.linux.elf.cpp.linker.debug">
                <targetPlatform
-                     id="org.eclipse.cdt.cross.arc.gnu.linux.elf.platform.debug"
+                     id="org.eclipse.cdt.cross.arc.gnu.600.linux.elf.platform.debug"
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.linux.platform.base">
                </targetPlatform>
                <builder
-                     id="org.eclipse.cdt.cross.arc.gnu.linux.elf.builder.debug"
+                     id="org.eclipse.cdt.cross.arc.gnu.600.linux.elf.builder.debug"
                      isAbstract="false"
                      isVariableCaseSensitive="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.linux.builder.base.hs">
+                     superClass="org.eclipse.cdt.cross.arc.gnu.linux.builder.base.600">
                </builder>
                <tool
                      id="org.eclipse.cdt.cross.arc.gnu.linux.elf.assembler.debug"
@@ -8300,7 +8324,7 @@
                      superClass="org.eclipse.cdt.cross.arc.gnu.linux.createlisting.base">
                </tool>
                <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.linux.elf.printsize.debug"
+                     id="org.eclipse.cdt.cross.arc.gnu.600.linux.elf.printsize.debug"
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.linux.printsize.base">
                </tool>
@@ -8311,7 +8335,7 @@
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
                id="org.eclipse.cdt.cross.arc.gnu.600.linux.elf.release"
                name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+               parent="org.eclipse.cdt.cross.arc.gnu.600.linux.configuration.base">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.600.linux.elf.toolchain.release"
                   isAbstract="false"
@@ -8319,15 +8343,15 @@
                   superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.600"
                   targetTool="org.eclipse.cdt.cross.arc.gnu.linux.elf.c.linker.release;org.eclipse.cdt.cross.arc.gnu.linux.elf.cpp.linker.release">
                <targetPlatform
-                     id="org.eclipse.cdt.cross.arc.gnu.linux.elf.platform.release"
+                     id="org.eclipse.cdt.cross.arc.gnu.600.linux.elf.platform.release"
                      isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.linux.platform.base">
+                     superClass="org.eclipse.cdt.cross.arc.gnu.linux.platform.base.600">
                </targetPlatform>
                <builder
                      id="org.eclipse.cdt.cross.arc.gnu.linux.elf.builder.release"
                      isAbstract="false"
                      isVariableCaseSensitive="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.linux.builder.base.hs">
+                     superClass="org.eclipse.cdt.cross.arc.gnu.linux.builder.base.600">
                </builder>
                <tool
                      id="org.eclipse.cdt.cross.arc.gnu.linux.elf.assembler.release"
@@ -8373,9 +8397,9 @@
          </configuration>
       </projectType>
       <configuration
-            id="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base"
+            id="org.eclipse.cdt.cross.arc.gnu.600.linux.configuration.base"
             name="ARC GNU Toolchain for ARC600 Linux host Configuration"
-            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base">
+            parent="org.eclipse.cdt.cross.arc.gnu.configuration.base.600">
          <enablement
                attribute="artifactExtension"
                extensionAdjustment="false"
@@ -8748,6 +8772,30 @@
                </and>
             </enablement>
          </tool>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
+               id="org.eclipse.cdt.cross.arc.gnu.700.linux.option.target.fpi"
+               isAbstract="false"
+               name="FPX"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpi">
+            <enumeratedOptionValue
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.none"
+                  isDefault="true"
+                  name="None">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mspfp"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.spfp"
+                  name="Single Precision FPX (-mspfp)">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mdpfp"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.fpi.dpfp"
+                  name="Double Precision FPX (-mdpfp)">
+            </enumeratedOptionValue>
+         </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
