--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
@@ -1137,6 +1137,13 @@
                name="Extended Arithmetic Instruction (-mEA)"
                valueType="boolean">
          </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               command="-mmpy"
+               id="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.mpy"
+               name="MPY instructions (-mmpy)"
+               valueType="boolean">
+         </option>
       </tool>
       <builder
             command="make"
@@ -3243,6 +3250,20 @@
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.option.target.lock"
                name="Atomic Option (-mlock)"
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.lock">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.uclibc.linux.option.target.atomic"
+               name="Atomic functions (-matomic)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.uclibc.linux.option.target.mpy"
+               name="MPY instruction (-mmpy)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy">
          </option>
       </toolChain>
       <projectType
@@ -6323,6 +6344,20 @@
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.eb.linux.option.target.lock"
                name="Atomic Option (-mlock)"
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.lock">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.uclibc.eb.linux.option.target.atomic"
+               name="Atomic functions (-matomic)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.option.target.mpy"
+               name="MPY instruction (-mmpy) "
+               superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.mpy">
          </option>
       </toolChain>
       
