--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -1087,6 +1087,13 @@
             name="Atomic Option (-mlock)"
             valueType="boolean">
       </option>
+      <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            command="-mmpy"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy"
+            name="MPY instructions (-mmpy)"
+            valueType="boolean">
+      </option>
 
       </tool>
       <builder
@@ -5538,6 +5545,13 @@
                name="Atomic Option (-mlock)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.lock">
          </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.windows.option.target.mpy"
+               name="MPY instructions (-mmpy)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy">
+         </option>
        
       </toolChain>
       <projectType
@@ -7296,6 +7310,13 @@
                name="Atomic Option (-mlock)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.lock">
          </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.eb.windows.option.target.mpy"
+               name="MPY instructions (-mmpy)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy">
+         </option>
 
       </toolChain>
       <configuration
@@ -8692,6 +8713,13 @@
                name="Atomic Option (-mlock)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.lock">
          </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.linux.option.target.mpy"
+               name="MPY instructions (-mmpy)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy">
+         </option>
       </toolChain>
       <toolChain
             archList="all"
@@ -9544,6 +9572,13 @@
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.option.target.lock"
                name="Atomic Option (-mlock)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.lock">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.option.target.mpy"
+               name="MPY instructions (-mmpy)"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy">
          </option>
       </toolChain>
       <projectType
