--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -5550,7 +5550,8 @@
                category="org.eclipse.cdt.cross.arc.gnu.windows.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.700.windows.option.target.mpy"
                name="MPY instructions (-mmpy)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy"
+               value="true">
          </option>
        
       </toolChain>
@@ -7315,7 +7316,8 @@
                category="org.eclipse.cdt.cross.arc.gnu.eb.windows.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.windows.option.target.mpy"
                name="MPY instructions (-mmpy)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy"
+               value="true">
          </option>
 
       </toolChain>
@@ -8718,7 +8720,8 @@
                category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.700.linux.option.target.mpy"
                name="MPY instructions (-mmpy)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy"
+               value="true">
          </option>
       </toolChain>
       <toolChain
@@ -9578,7 +9581,8 @@
                category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.option.target.mpy"
                name="MPY instructions (-mmpy)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mpy"
+               value="true">
          </option>
       </toolChain>
       <projectType
