--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -7719,16 +7719,16 @@
       </toolChain>
       <projectType
             buildArtefactType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application"
-            id="org.eclipse.cdt.cross.arc.gnu.linux.elf.hs"
+            id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf"
             isAbstract="true">
          <configuration
                artifactExtension="elf"
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.debug"
                name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base.hs">
             <toolChain
-                  id="org.eclipse.cdt.cross.arc.gnu.linux.elf.toolchain.debug"
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.toolchain.debug"
                   isAbstract="false"
                   secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
                   superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs"
@@ -7789,9 +7789,9 @@
          <configuration
                artifactExtension="elf"
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
-               id="org.eclipse.cdt.cross.arc.gnu.600.linux.elf.release"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.release"
                name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base.hs">
             <toolChain
                   id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.toolchain.release"
                   isAbstract="false"
@@ -10046,6 +10046,12 @@
          </toolChain>
          <toolChain
                id="org.eclipse.cdt.cross.arc.gnu.eb.windows.toolchain.base">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.eb.windows.toolchain.base.hs">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
          </toolChain>
       </template>
       <template
