--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -10026,6 +10026,285 @@
             </checkBuildProperty>
          </enablement>
       </configuration>
+      <projectType
+            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.staticLib"
+            id="org.eclipse.cdt.cross.arc.gnu.700.windows.lib"
+            isAbstract="true">
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
+               id="org.eclipse.cdt.cross.arc.gnu.700.windows.lib.debug"
+               name="Debug"
+               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.700.windows.lib.toolchain.debug"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base.700"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.debug">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.platform.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.builder.debug"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.assembler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.c.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.cpp.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
+               id="org.eclipse.cdt.cross.arc.gnu.700.windows.lib.release"
+               name="Release"
+               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.700.windows.lib.toolchain.release"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base.700"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.release">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.platform.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.builder.release"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.assembler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.c.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.cpp.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+      </projectType>
+      <projectType
+            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.staticLib"
+            id="org.eclipse.cdt.cross.arc.gnu.600.windows.lib"
+            isAbstract="true">
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
+               id="org.eclipse.cdt.cross.arc.gnu.600.windows.lib.debug"
+               name="Debug"
+               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base.600">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.600.windows.lib.toolchain.debug"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base.600"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.debug">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.platform.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.builder.debug"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.assembler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.c.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.cpp.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
+               id="org.eclipse.cdt.cross.arc.gnu.600.windows.lib.release"
+               name="Release"
+               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base.600">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.600.windows.lib.toolchain.release"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base.600"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.release">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.platform.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.builder.release"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.assembler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.c.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.cpp.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+      </projectType>
+      <projectType
+            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.staticLib"
+            id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib"
+            isAbstract="true">
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.debug"
+               name="Debug"
+               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base.hs">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.toolchain.debug"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base.hs"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.debug">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.platform.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.builder.debug"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base.hs">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.assembler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.c.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.cpp.compiler.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.debug"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+         <configuration
+               artifactExtension="a"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.release"
+               name="Release"
+               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base.hs">
+            <toolChain
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.toolchain.release"
+                  isAbstract="false"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base.hs"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.release">
+               <targetPlatform
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.platform.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
+               </targetPlatform>
+               <builder
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.builder.release"
+                     isAbstract="false"
+                     isVariableCaseSensitive="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base.hs">
+               </builder>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.assembler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.c.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.cpp.compiler.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
+               </tool>
+               <tool
+                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.release"
+                     isAbstract="false"
+                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
+               </tool>
+            </toolChain>
+         </configuration>
+      </projectType>
       
       
       <!-- -->
@@ -10080,9 +10359,6 @@
       </template>
       <template
             id="org.eclipse.cdt.build.core.templates.EM4EmptyProject">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base">
-         </toolChain>
           <toolChain
                id="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base.hs">
          </toolChain>
